[workspace]
resolver = "1"
members = [
    "actix-prost",
    "actix-prost-build",
    "actix-prost-macros",
    "actix-prost-convert-trait",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/blockscout/actix-prost"
exclude = ["tests"]
