[package]
name = "actix-prost-build"
description = "Generate actix handles from Protocol Buffer files"
homepage = "https://github.com/blockscout/actix-prost/tree/main/actix-prost-build"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
convert-trait = { version = "0.1.0", path = "../actix-prost-convert-trait", package = "actix-prost-convert-trait", optional = true }
thiserror = "2.0"
proc-macro2 = "1.0"
prost-build = "0.13"
prettyplease = "0.2"
prost-reflect = "0.14.4"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.9"

[features]
conversions = [ "dep:convert-trait" ]
