[package]
name = "actix-prost-build"
description = "Generate actix handles from Protocol Buffer files"
homepage = "https://github.com/blockscout/actix-prost/tree/main/actix-prost-build"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
convert-trait = { workspace = true, optional = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
prost-build = { workspace = true }
prost-reflect = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_yaml = { workspace = true }
syn = { workspace = true, features = [ "full" ] }
thiserror = { workspace = true }

[features]
conversions = [ "dep:convert-trait" ]
