[package]
name = "actix-prost-convert-trait"
description = "Conversions between proto and some of the user types."
homepage = "https://github.com/blockscout/actix-prost/tree/main/actix-prost-convert-trait"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
ethers-core = { version = "2.0.14", optional = true }
bytes = { version = "1.9", optional = true }
hex = { version = "0.4", optional = true }
url = { version = "2", optional = true }

[features]
default = [ "conv-full" ]
conv-full = [ "conv-bytes", "conv-address", "conv-url" ]
conv-bytes = [ "dep:bytes", "dep:hex" ]
conv-address = [ "dep:ethers-core" ]
conv-url = [ "dep:url" ]
