[package]
name = "actix-prost-convert-trait"
description = "Conversions between proto and some of the user types."
homepage = "https://github.com/blockscout/actix-prost/tree/main/actix-prost-convert-trait"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
ethers-core = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[features]
default = [ "conv-full" ]
conv-full = [ "conv-bytes", "conv-address", "conv-url" ]
conv-bytes = [ "dep:bytes", "dep:hex" ]
conv-address = [ "dep:ethers-core" ]
conv-url = [ "dep:url" ]
