[package]
name = "actix-prost"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2"
tonic = "0.8"
actix-web = "4"
actix-http = "3"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.0", features = ["base64"] }
prost = "0.11"
serde_json = "1.0"

anyhow = { version = "1.0.0" }
ethers-core = { version = "2.0.0", optional = true }
bytes = { version = "1.3", optional = true }
hex = { version = "0.4", optional = true}

[features]
default = ["conv-full"]
conv-full = ["conv-bytes", "conv-address"]
conv-bytes = ["dep:bytes", "dep:hex"]
conv-address = ["dep:ethers-core"]
