[package]
name = "actix-prost"
description = "Generate actix handles and routes from grpc definitions"
homepage = "https://github.com/blockscout/actix-prost/tree/main/actix-prost"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
http = "1.2"
tonic = "0.12"
actix-web = "4"
actix-http = "3"
serde = { version = "1", features = [ "derive" ] }
serde_with = { version = "3.12", features = [ "base64" ] }
prost = "0.13"
serde_json = "1.0"
