[package]
name = "actix-prost"
description = "Generate actix handles and routes from grpc definitions"
homepage = "https://github.com/blockscout/actix-prost/tree/main/actix-prost"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
actix-http = { workspace = true }
actix-web = { workspace = true }
http = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = [ "base64" ] }
tonic = { workspace = true }
