[package]
name = "convert-trait"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers-core = { version = "2.0.0", optional = true }
bytes = { version = "1.3", optional = true }
hex = { version = "0.4", optional = true}

[features]
default = ["conv-full"]
conv-full = ["conv-bytes", "conv-address"]
conv-bytes = ["dep:bytes", "dep:hex"]
conv-address = ["dep:ethers-core"]
