[package]
name = "convert-trait"
version = "2.0.0"
edition = "2021"

[dependencies]
ethers-core = { version = "2.0.14", optional = true }
bytes = { version = "1.9", optional = true }
hex = { version = "0.4", optional = true }
url = { version = "2", optional = true }

[features]
default = [ "conv-full" ]
conv-full = [ "conv-bytes", "conv-address", "conv-url" ]
conv-bytes = [ "dep:bytes", "dep:hex" ]
conv-address = [ "dep:ethers-core" ]
conv-url = [ "dep:url" ]
