[package]
name = "tests"
publish = false

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
actix-http = { workspace = true }
actix-prost = { workspace = true }
actix-prost-macros = { workspace = true }
async-trait = { workspace = true }
actix-web = { workspace = true }
convert-trait = { workspace = true }
ethers = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = [ "base64" ] }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
tonic = { workspace = true }

[build-dependencies]
actix-prost-build = { workspace = true, features = [ "conversions" ] }
prost-build = { workspace = true }
tonic-build = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = [ "json" ] }
